--- a/src/styles/components/SearchBar.module.scss
+++ b/src/styles/components/SearchBar.module.scss
@@ -15,6 +15,10 @@
 		width: 100%;
 		cursor: inherit;
 
+		@media (max-width: 600px) {
+			pointer-events: none;
+		}
+
 		&::placeholder {
 			color: rgba(0, 0, 0, 0.4);
 			font-weight: 500;
